--- a/Styles.css
+++ b/Styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     text-align: center;
     background-color: #f0f8ff;
+    color: #40514E;
 }
 
 hr {
@@ -12,6 +13,8 @@ hr {
     border-top:0 ;
     border-right:0 ;
     border-left:0 ;
+    color: #66BFBF;
+    margin: 100px auto;
 }
 
 
@@ -52,17 +55,19 @@ hr {
 
 /**********************************  C O N T A I N E R S  **********************************/
 
-.top_container{
-
-}
-.top_container0 {
+.top_container {
     position: relative;
+    margin-top: 100px;
 }
 .middle_container {
-    margin-top: 20px ;
+    margin: 100px auto;
 }
 .bottom_container {
-
+    margin-top: 80px;
+    background-color: #66BFBF;
+    padding: 30px;
+    border-top-left-radius:  20px;
+    border-top-right-radius: 20px;
 }
 
 
@@ -115,21 +120,21 @@ hr {
 
 .qualification { 
     width: 50%;
-    margin: 100px auto 100px auto;
+    margin: 80px auto;
 }
 
 .skills_field_it {
     width: 50%;
-    margin: 100px auto 100px auto; 
+    margin: 80px auto; 
     background-color: f0f8ff; 
 }
 .skills_field_general {
     width: 50%;
-    margin: 100px auto 100px auto;
+    margin: 80px auto; 
 }
 .skills_field_languages {
     width: 50%;
-    margin: 100px auto 100px auto;
+    margin: 80px auto; 
 }
 
 .qualification_p {
@@ -138,4 +143,76 @@ hr {
 
 .skills_p { 
     line-height: 1.5;
+}
+
+
+/**********************************  C O N T A C T   M E  **********************************/
+
+.contact_me_info {
+    margin: 30px auto 50px auto;
+}
+
+.footer_link {
+    color: #11999E;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+    margin-right: 20px ;
+}
+
+.copyright {
+    color: #EAF6F6;
+    margin: 20px auto 20px auto;
+    font-family: 'Crimson Text', serif;
+}
+
+a:hover {
+    color: #EAF6F6;
+}
+
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Georgia;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+}
+
+
+/**********************************  BootStrap Modification  **********************************/
+
+.nav_edit {   /* nav */
+    background-color: #66BFBF;
+    --bs-bg-opacity: 1;
+}  
+
+.brand_edit {
+    color: #f0f8ff;
+    font-weight: bold;
+    font-size: 40px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding-left:10px ;
+}
+
+.navbar-collapse_edit {
+    padding-right:10px ;
 }
